@@ -17,7 +17,7 @@
     <dependency>
       <groupId>com.zextras.carbonio</groupId>
       <artifactId>carbonio-systemd-notify</artifactId>
-      <version>1.0.1</version>
+      <version>1.0.2-SNAPSHOT</version>
     </dependency>
     <!-- Must be provided to avoid collision -->
     <dependency>
@@ -636,11 +636,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-          </compilerArgs>
-        </configuration>
       </plugin>
       <!-- Generate classes -->
       <plugin>
@@ -916,7 +911,7 @@ EOF
         <configuration>
           <forkCount>1</forkCount>
           <reuseForks>true</reuseForks>
-          <argLine>@{argLine} --enable-preview --enable-native-access=ALL-UNNAMED -Xmx2g -Dserver.dir=${project.basedir}
+          <argLine>@{argLine} --enable-native-access=ALL-UNNAMED -Xmx2g -Dserver.dir=${project.basedir}
             -Dzimbra.config=${project.basedir}/src/test/resources/localconfig-test.xml
             -Dlog4j.configurationFile=${project.basedir}/src/test/resources/log4j-test.properties
             -Dfile.encoding=UTF-8 -Djava.locale.providers=COMPAT,SPI
@@ -932,7 +927,7 @@ EOF
         <configuration>
           <forkCount>1</forkCount>
           <reuseForks>true</reuseForks>
-          <argLine>@{argLine} --enable-preview --enable-native-access=ALL-UNNAMED -Xmx2g -Dserver.dir=${project.basedir}
+          <argLine>@{argLine} --enable-native-access=ALL-UNNAMED -Xmx2g -Dserver.dir=${project.basedir}
             -Dlog4j.configurationFile=${project.basedir}/src/test/resources/log4j-test.properties
             -Dzimbra.config=${project.basedir}/src/test/resources/localconfig-test.xml
             -Dfile.encoding=UTF-8 -Djava.locale.providers=COMPAT,SPI
